fix:about_us_x_overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* Add this to your global CSS file */
+body {
+  overflow-x: hidden;
+}
